--- a/.cargo/config.toml
+++ b/.cargo/config.toml
@@ -9,3 +9,6 @@ rustflags = ["--cfg", "espidf_time64"]
 [unstable]
 build-std = ["std", "panic_abort"]
 build-std-features = ["panic_immediate_abort"]
+
+#[env]
+#ESP_IDF_SDKCONFIG_DEFAULTS = "sdkconfig.defaults"
