--- a/Cargo.toml
+++ b/Cargo.toml
@@ -31,6 +31,9 @@ esp-idf-svc = "0.51"
 esp-idf-sys = { version = "0.36.1", features = ["binstart"] }
 embedded-svc = "0.28.1"
 anyhow = "1.0.98"
+esp-idf-hal = "0.45.2"
+nb = "1.1.0"
+dht-sensor = "0.2.1"
 
 
 [build-dependencies]
